lintrunner/tests/snapshots/integration_test__empty_command_fails.snap
---
source: tests/integration_test.rs
expression: output_lines

---
- "STDOUT:"
- ""
- ""
- "STDERR:"
- "error:        Invalid linter configuration: 'TESTLINTER' has an empty command list."
