lintrunner/tests/snapshots/integration_test__invalid_config_fails.snap
---
source: tests/integration_test.rs
expression: output_lines

---
- "STDOUT:"
- ""
- ""
- "STDERR:"
- "error:        Config file had invalid schema"
- "caused_by:             missing field `linter` at line 1 column 1"
