lintrunner/tests/snapshots/integration_test__unknown_config_fails.snap
---
source: tests/integration_test.rs
expression: output_lines

---
- "STDOUT:"
- ""
- ""
- "STDERR:"
- "error:        Could not read lintrunner config at: 'asdfasdfasdf'"
- "caused_by:             No such file or directory (os error 2)"
